EduMIPS64 ChangeLog
------------------- 
0.5.3 (..)
	- 

0.5.2 (17/04/2008)
	- Fixed a bug about a stall for synchronous exceptions and forwarding (max83t)
	- Fixed Java 6 Swing bug (andrea)
	- Fixed ReportDialog bug (mancausoft)
	- Fixed aligned read/write with labels (andrea)
	- Fixed MIPS32 alias visualization (thegoodgiant)

0.5.1 (24/08/2007)
	- Updated embedded manual with a SYSCALL page (jesky)
	- Parser bug fixes (mancausoft)
	- Memory bug fixes (mancausoft)
	- Added the MIPS alias to each register's name in the Registers window (andrea)
	- Fixed MOVN/MOVZ behavior (andrea)
	- Manual fixes (jesky)
	- Fixed Jump-after-Break bug (andrea)
	- Added debug info to svnjar (mancausoft)
	- Fixed OSX issues (mancausoft)

  0.5 (05/06/2007)
  	- Implemented a subset of MIPS32 instructions:
	  * ADD, ADDI, ADDIU, ADDU
	  * DIV, DIVU
	  * MULT, MULTU
	  * SLL, SLLV, SRA, SRAV, SRL, SRLV
	  * SUB, SUBU
	- Added LO and HI registers visualization in GUI (max83t)
	- Bug fixes for the parser (max83t, mancausoft)
	- Bug fixes for the Error Dialog (mancausoft)
	- DSRAV fix (MIPS32 group)
	- Bug fixes for SYSCALL 1 and 5 (andrea)
	- Updated manual (MIPS32 group, andrea)
	- Clear button for the I/O window (andrea)
	- Fixed compilation under Java 6 (andrea)
	- Bug fix in the locale files (andrea)
	- Changed default interval between cycles from 100ms to 10ms (andrea)
	- Bug fix for negative labels in load/store instructions (mancausoft)
	- More graceful error window for erroneous memory access (andrea)

0.4.2 (22/04/2007)
	- Added DADDIU instruction, and marked DADDUI as deprecated (mancausoft)
	- New instructions: B, BGEZ, DMULTU, DDIVU (mancausoft)
	- Standard MIPS aliases for the first 32 registers (thegoodgiant, jesky,
      lorenzo)
	- Fixed a parsing bug with big values (mancausoft)
	- Fixed a bug regarding SynchronousException (mancausoft)
	- Updated all the manuals (andrea)
	- Bug fixes for the manuals (andrea)
	- Solved a bug that happened opening files (andrea)