@@ -165,3 +165,4 @@ HT.File = --file (-f) filename		opens the specified file
 HT.Debug = --debug (-d) 			enters in debug mode
 HT.Help = --help (-h)			shows this help
 CLEAR = Clear
+DATA = Data
