@@ -161,3 +161,4 @@ ENTERINPUT = Inserire il testo
 INPUT = input
 IOEXCEPTION = Errore di I/O
 CLEAR = Pulisci
+DATA = Dati
